--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -32,6 +32,60 @@
             background-color: #af4d02;
             color: white;
         }
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: black;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        /* Add padding to containers */
+        .container {
+            padding: 16px;
+            background-color: white;
+        }
+
+        /* Full-width input fields */
+        input[type=text], input[type=password] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+        }
+
+        input[type=text]:focus, input[type=password]:focus {
+            background-color: #ddd;
+            outline: none;
+        }
+
+        /* Overwrite default styles of hr */
+        hr {
+            border: 1px solid #f1f1f1;
+            margin-bottom: 25px;
+        }
+
+        /* Set a style for the submit button */
+        .registerbtn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 16px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            opacity: 0.9;
+        }
+
+        .registerbtn:hover {
+            opacity: 1;
+        }
+
+
+
     </style>
 </head>
 <body>
@@ -41,5 +95,27 @@
     <a >Contact</a>
     <a href="About_us">About us</a>
 </div>
+<form action="/action_page.php">
+    <div class="container">
+        <h1>Create Movie</h1>
+        <hr>
+
+        <label for="email"><b>Title</b></label>
+        <input type="text" placeholder="Enter Title" name="email" required>
+
+        <label for="psw"><b>Year</b></label>
+        <input type="text" placeholder="dd/mm/yyyy" name="psw" required>
+
+        <label for="psw-repeat"><b>Duration</b></label>
+        <input type="text" placeholder="Enter Duration" name="psw-repeat" required>
+
+        <label for="psw-repeat"><b>Genre</b></label>
+        <input type="text" placeholder="Enter Genre" name="psw-repeat" required>
+        <hr>
+
+        <button type="submit" class="registerbtn">Create</button>
+
+</form>
+
 </body>
 </html>
