--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -21,27 +21,34 @@
         .hero-text {
             text-align: center;
             position: absolute;
-            top: 50%;
+            top: 20%;
             left: 50%;
             transform: translate(-50%, -50%);
             color: #fffbff;
         }
 
         .hero-text button {
-            border: none;
-            outline: 0;
-            display: inline-block;
-            padding: 10px 25px;
-            color: #fffbff;
-            background-color: #000000;
+            padding: 12px 21px;
+            font-size: 20px;
             text-align: center;
             cursor: pointer;
-            href="Movie"
+            outline: none;
+            color: #fffbff;
+            background-color: #af4d02;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 9px #363636;
+
         }
 
         .hero-text button:hover {
-            color: #fffbff;
+            color: #000000;
         }
+
+        .button:active {
+            background-color: #af4d02;
+            box-shadow: 0 5px #666;
+            transform: translateY(4px);
     </style>
 </head>
 <body>
@@ -50,7 +57,7 @@
     <div class="hero-text">
         <h1 style="font-size:50px">5000 Movies</h1>
         <p>For everyone who loves movies</p>
-        <a href="Movie"><button> Let's go!</button><a/>
+        <a href="Movie"><button class="button">Get Started</button>
     </div>
 </div>
 
