--- a/src/main/resources/templates/About_us.html
+++ b/src/main/resources/templates/About_us.html
@@ -63,7 +63,7 @@
 <div class="topnav">
     <a href="/">IMDB</a>
     <a href="Movie">Movie</a>
-    <a >Contact</a>
+    <a href="no">Contact</a>
     <a class="active" href="About_us">About us</a>
 </div>
 
