--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -81,8 +81,7 @@
     <a >Contact</a>
     <a href="About_us">About us</a>
 </div>
-<form action=
-              Movie movie5 = new Movie ("title", "Genre", "Duration", "id");
+<form action= Movie movie5 = new Movie ("title", "Genre", "Duration", "id");
 
 "/">
     <div class="container">
