--- a/src/main/resources/templates/Movie.html
+++ b/src/main/resources/templates/Movie.html
@@ -115,13 +115,13 @@
 
     <div class="container">
 
-        <table class="table table-striped table-bordered table-hover">
+        <table id="myTable">
             <thead>
-            <tr>
-                <th>Title</th>
-                <th>Genre</th>
-                <th>Duration</th>
-                <th>ID</th>
+            <tr class="header">
+                <th style="width:25%;">Title</th>
+                <th style="width:25%;">Genre</th>
+                <th style="width:25%;">Duration</th>
+                <th style="width:25%;">ID</th>
             </tr>
             </thead>
             <tbody>
@@ -138,48 +138,7 @@
         </table>
     </div>
 </div>
-<h2>My Customers</h2>
 
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
-
-<<table id="myTable">
-    <tr class="header">
-        <th style="width:60%;">Name</th>
-        <th style="width:40%;">Country</th>
-    </tr>
-    <tr>
-        <td>Alfreds Futterkiste</td>
-        <td>Germany</td>
-    </tr>
-    <tr>
-        <td>Berglunds snabbkop</td>
-        <td>Sweden</td>
-    </tr>
-    <tr>
-        <td>Island Trading</td>
-        <td>UK</td>
-    </tr>
-    <tr>
-        <td>Koniglich Essen</td>
-        <td>Germany</td>
-    </tr>
-    <tr>
-        <td>Laughing Bacchus Winecellars</td>
-        <td>Canada</td>
-    </tr>
-    <tr>
-        <td>Magazzini Alimentari Riuniti</td>
-        <td>Italy</td>
-    </tr>
-    <tr>
-        <td>North/South</td>
-        <td>UK</td>
-    </tr>
-    <tr>
-        <td>Paris specialites</td>
-        <td>France</td>
-    </tr>
-</table>
         </div>
 </table>
 </body>
