--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -98,7 +98,7 @@
         <input type="text" placeholder="Enter Duration" required>
 
         <label for="id"><b>ID</b></label>
-        <input type="text" placeholder="Enter ID" required>
+        <input type="text" placeholder="Enter ID" numberObject.required>
         <hr>
 
         <button class="registerbtn">Create</button>
