--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -78,7 +78,7 @@
 <div class="topnav">
     <a href="/">IMDB</a>
     <a class="active" href="Movie">Movie</a>
-    <a >Contact</a>
+    <a href="no">Contact</a>
     <a href="About_us">About us</a>
 </div>
 
