--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -93,7 +93,7 @@
         <label for="genre"><b>Genre</b></label>
         <input type="text" th:field="${movie.genre}" placeholder="Enter Genre"  required>
 
-        <label for="duration"><b>Duration</b></label>
+        <label for="duration"><b>Duration (min)</b></label>
         <input type="text" th:field="${movie.duration}" placeholder="Enter Duration" required>
 
         <label for="id"><b>ID</b></label>
