--- a/src/main/resources/templates/Movie.html
+++ b/src/main/resources/templates/Movie.html
@@ -121,7 +121,7 @@
             <tr class="header">
                 <th style="width:25%;">Title</th>
                 <th style="width:25%;">Genre</th>
-                <th style="width:25%;">Duration</th>
+                <th style="width:25%;">Duration (min)</th>
                 <th style="width:25%;">ID</th>
             </tr>
             </thead>
