--- a/src/main/resources/templates/Movie.html
+++ b/src/main/resources/templates/Movie.html
@@ -111,7 +111,7 @@
 <div style="padding-left:16px">
     <h2>Movie</h2>
     <a href="/Create"><button  class="button"><span>Create </span></button></a>
-    <a href="/Search"><button  class="button"><span>Search </span></button></a>
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Title.." title="Type in a name">
 
 
     <div class="container">
@@ -142,5 +142,24 @@
 
         </div>
 </table>
+<script>
+    function myFunction() {
+        var input, filter, table, tr, td, i;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("myTable");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName("td")[0];
+            if (td) {
+                if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = "";
+                } else {
+                    tr[i].style.display = "none";
+                }
+            }
+        }
+    }
+</script>
 </body>
 </html>
