--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -8,12 +8,7 @@
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
         }
-        body {
-            background-image: url("https://i.imgur.com/VKkRjuB.png")
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: Bottom Right;
-        }        .hero-image {
+        .hero-image {
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://www.wallmesh.com/wp-content/uploads/2017/11/rampage-2018-movie-hd-wallpaper-1920x1080.jpg");
             height: 100%;
             background-position: center;
@@ -49,22 +44,21 @@
             box-shadow: 0 5px #666;
             transform: translateY(4px);
         }
-        h2 {
+        .logo {
             position: fixed;
-            left: 760px;
-            top: 700px;
+            right: 0px;
+            bottom: 0PX;
         }
 
     </style>
 </head>
 <body>
-<div class="hero-image">
+<div class="hero-image"></div>
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"> </div>
     <div class="hero-text">
-        <h2> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"></h2>
         <h1 style="font-size:50px">5000 Movies</h1>
         <p>For everyone who loves movies</p>
         <a href="Movie"><button class="button">Get Started</button>
     </div>
-</div>
 </body>
 </html>
