--- a/src/main/resources/templates/About_us.html
+++ b/src/main/resources/templates/About_us.html
@@ -61,6 +61,12 @@
             left: 1725px;
             top: -21px;
         }
+
+        .logo {
+            position: absolute;
+            right: 14px;
+            top: -2PX;
+        }
     </style>
 </head>
 
@@ -113,6 +119,6 @@
         });
     }
 </script>
-
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="150" height="50"> </div>
 </body>
 </html>
