--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -46,7 +46,7 @@
         }
         .logo {
             position: fixed;
-            right: 0px;
+            right: 15px;
             bottom: 0PX;
         }
 
@@ -57,7 +57,7 @@
 <div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"> </div>
     <div class="hero-text">
         <h1 style="font-size:50px">5000 Movies</h1>
-        <p>For everyone who loves movies</p>
+        <p>We believe in fine movie</p>
         <a href="Movie"><button class="button">Get Started</button>
     </div>
 </body>
