--- a/src/main/resources/templates/no.html
+++ b/src/main/resources/templates/no.html
@@ -27,6 +27,12 @@
             color: #fffbff;
         }
 
+        .logo {
+            position: fixed;
+            right: 15px;
+            bottom: 0PX;
+        }
+
 
     </style>
 </head>
@@ -40,6 +46,6 @@
         <button> <a href="https://www.facebook.com/gustav.torp.3?ref=br_rs">Not satisfied? go tell Gustav!!</a></button>
     </div>
 </div>
-
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"> </div>
 </body>
 </html>
