--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -108,10 +108,8 @@
             <input class="registerbtn" type="submit" value="Create"/>
 
         <hr>
-
-
-
-
-
+        </form>
+    </div>
+            <div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="150" height="50"> </div>
 </body>
 </html>
