--- a/src/main/resources/templates/Movie.html
+++ b/src/main/resources/templates/Movie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:padding-Right="http://www.w3.org/1999/xhtml">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
@@ -99,10 +99,10 @@
             right: 0;
         }
 
-        h3 {
+        .logo {
             position: absolute;
-            left: 1725px;
-            top: -21px;
+            right: 14px;
+            top: -2PX;
         }
     </style>
 </head>
@@ -115,8 +115,8 @@
     <a href="About_us">About us</a>
 </div>
 
-<div style="padding-left:16px">
-    <h2>Movie</h2>
+<div style="padding-left: 38px;padding-right: 4px;";>
+    <h2>Movie List</h2>
     <a href="/Create"><button  class="button"><span>Create </span></button></a>
     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Title.." title="Type in a name">
 
@@ -168,6 +168,6 @@
         }
     }
 </script>
-<h3> <img src="https://i.imgur.com/VKkRjuB.png"  width="150" height="50"></h3>
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="150" height="50"> </div>
 </body>
 </html>
