--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -43,15 +43,21 @@
             background-color: #af4d02;
             box-shadow: 0 5px #666;
             transform: translateY(4px);
+        }
+        .logo {
+            position: fixed;
+            right: 15px;
+            bottom: 0PX;
+        }
     </style>
 </head>
 <body>
-<div class="hero-image">
-    <div class="hero-text">
-        <h1 style="font-size:50px">5000 Movies</h1>
-        <p>For everyone who loves movies</p>
-        <a href="Movie"><button class="button">Get Started</button>
-    </div>
+<div class="hero-image"></div>
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"> </div>
+<div class="hero-text">
+    <h1 style="font-size:50px">5000 Movies</h1>
+    <p>We believe in fine movie</p>
+    <a href="Movie"><button class="button">Get Started</button>
 </div>
 </body>
 </html>
