--- a/src/main/resources/templates/About_us.html
+++ b/src/main/resources/templates/About_us.html
@@ -8,12 +8,10 @@
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
         }
-
         .topnav {
             overflow: hidden;
             background-color: #333;
         }
-
         .topnav a {
             float: left;
             color: #f2f2f2;
@@ -22,17 +20,14 @@
             text-decoration: none;
             font-size: 17px;
         }
-
         .topnav a:hover {
             background-color: #af4d02;
             color: black;
         }
-
         .topnav a.active {
             background-color: #af4d02;
             color: white;
         }
-
         .accordion {
             background-color: #eee;
             color: #444;
@@ -45,21 +40,30 @@
             font-size: 15px;
             transition: 0.4s;
         }
-
         .active, .accordion:hover {
             background-color: #ccc;
         }
-
         .panel {
             padding: 0 18px;
             display: none;
             background-color: white;
             overflow: hidden;
         }
+        h3 {
+            position: absolute;
+            left: 1725px;
+            top: -21px;
+        }
+        .logo {
+            position: absolute;
+            right: 14px;
+            top: -2PX;
+        }
     </style>
 </head>
 
 <body>
+<h3> <img src="https://i.imgur.com/VKkRjuB.png"  width="150" height="50"></h3>
 <div class="topnav">
     <a href="/">IMDB</a>
     <a href="Movie">Movie</a>
@@ -94,7 +98,6 @@
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
-
     for (i = 0; i < acc.length; i++) {
         acc[i].addEventListener("click", function() {
             this.classList.toggle("active");
@@ -107,6 +110,6 @@
         });
     }
 </script>
-
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="150" height="50"> </div>
 </body>
 </html>
