--- a/src/main/resources/templates/no.html
+++ b/src/main/resources/templates/no.html
@@ -8,7 +8,6 @@
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
         }
-
         .hero-image {
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://wallpapercave.com/wp/wp1990727.jpg");
             height: 100%;
@@ -17,7 +16,6 @@
             background-size: cover;
             position: relative;
         }
-
         .hero-text {
             text-align: center;
             position: absolute;
@@ -26,8 +24,11 @@
             transform: translate(-50%, -50%);
             color: #fffbff;
         }
-
-
+        .logo {
+            position: fixed;
+            right: 15px;
+            bottom: 0PX;
+        }
     </style>
 </head>
 <body>
@@ -40,6 +41,6 @@
         <button> <a href="https://www.facebook.com/gustav.torp.3?ref=br_rs">Not satisfied? go tell Gustav!!</a></button>
     </div>
 </div>
-
+<div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"> </div>
 </body>
 </html>
