--- a/src/main/resources/templates/Create.html
+++ b/src/main/resources/templates/Create.html
@@ -72,15 +72,14 @@
         .registerbtn:hover {
             opacity: 1;
         }
-        h3 {
+        .logo {
             position: absolute;
-            left: 1725px;
-            top: -21px;
+            right: 14px;
+            top: -2PX;
         }
     </style>
 </head>
 <body>
-<h3> <img src="https://i.imgur.com/VKkRjuB.png"  width="150" height="50"></h3>
 <div class="topnav">
     <a href="/">IMDB</a>
     <a class="active" href="Movie">Movie</a>
