--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -56,7 +56,7 @@
 <div class="logo"> <img src="https://i.imgur.com/VKkRjuB.png" alt="Trulli" width="300" height="100"> </div>
 <div class="hero-text">
     <h1 style="font-size:50px">5000 Movies</h1>
-    <p>We believe in fine movie</p>
+    <p>We believe in fine movies</p>
     <a href="Movie"><button class="button">Get Started</button>
 </div>
 </body>
